--- a/workspaces/themed-ui/src/Card/Card.module.css
+++ b/workspaces/themed-ui/src/Card/Card.module.css
@@ -1,16 +1,33 @@
 .Card {
+  box-sizing: border-box;
   border-style: solid;
   border-width: 1px;
   border-color: inherit;
   visibility: visible;
 }
 
+.Card > :not(:first-child) {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.Card > :not(:last-child) {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 .Head {
+  box-sizing: border-box;
   border-style: solid;
   border-width: 0 0 1px;
 }
 
+.Body {
+  box-sizing: border-box;
+}
+
 .Foot {
+  box-sizing: border-box;
   border-style: solid;
   border-width: 1px 0 0;
 }
